# jpm-advisor-agent

./: .env.example  .gitignore  PROGRESS.md  README.md  SPEC.md  app.py  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  run.sh
data/knowledge_base/: 01_asset_allocation.md  02_risk_tolerance.md  03_retirement_planning.md  04_diversification.md  05_tax_advantaged_accounts.md  06_emergency_fund_and_insurance.md
data/personas/: david_moderate.json  margaret_conservative.json  priya_aggressive.json
data/reviewer/: policy.yaml
examples/: sample_conversation_david.log.jsonl  sample_conversation_david.md  sample_conversation_margaret.md  sample_conversation_priya.md
src/: main.py
src/agents/: advisor.py  analyst.py  base.py  client.py  reviewer.py
src/eval/: __init__.py  __main__.py  deterministic.py  judge.py  report.py  runner.py
src/factories/: agent_factory.py
src/graph/: builder.py  routing.py  state.py
src/guardrails/: limits.py  output_filter.py  pii.py
src/observability/: logger.py
src/providers/: anthropic_llm.py  embeddings.py  llm.py  ollama_llm.py  openai_llm.py
src/schemas/: __init__.py  advice.py  client_profile.py  messages.py
src/strategies/: risk_profile.py
src/tools/: ingest.py  knowledge_store.py  web_search.py
src/ui/: __init__.py  human_client.py  persona_editor.py  streaming.py
tests/: conftest.py  test_edge_cases.py  test_integration.py  test_main.py  test_observability.py  test_personas.py  test_providers.py  test_schemas.py  test_strategies.py
tests/test_agents/: test_advisor.py  test_client.py  (+2 more)
(+16 files in other folders)
